<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>CVActionMorphologyView</class>
 <widget class="CVActionView" name="CVActionMorphologyView">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>843</width>
    <height>652</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>CVActionMorphologyView</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="3" column="3">
    <widget class="QPushButton" name="okButton">
     <property name="text">
      <string>OK</string>
     </property>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="QLabel" name="label">
     <property name="font">
      <font>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="text">
      <string>Kernel size</string>
     </property>
    </widget>
   </item>
   <item row="1" column="1">
    <widget class="QSlider" name="kernelSizeSlider">
     <property name="minimum">
      <number>1</number>
     </property>
     <property name="maximum">
      <number>111</number>
     </property>
     <property name="singleStep">
      <number>2</number>
     </property>
     <property name="pageStep">
      <number>10</number>
     </property>
     <property name="value">
      <number>1</number>
     </property>
     <property name="sliderPosition">
      <number>1</number>
     </property>
     <property name="tracking">
      <bool>true</bool>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="tickPosition">
      <enum>QSlider::TicksBelow</enum>
     </property>
     <property name="tickInterval">
      <number>2</number>
     </property>
    </widget>
   </item>
   <item row="1" column="3">
    <widget class="QComboBox" name="morphShapeComboBox">
     <property name="minimumSize">
      <size>
       <width>120</width>
       <height>0</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
       <width>150</width>
       <height>16777215</height>
      </size>
     </property>
     <item>
      <property name="text">
       <string>MORPH_RECT</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>MORPH_CROSS</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>MORPH_ELLIPSE</string>
      </property>
     </item>
    </widget>
   </item>
   <item row="2" column="0" colspan="4">
    <widget class="QGraphicsView" name="graphicsView"/>
   </item>
   <item row="3" column="2">
    <widget class="QPushButton" name="cancelButton">
     <property name="text">
      <string>Cancel</string>
     </property>
    </widget>
   </item>
   <item row="1" column="2">
    <widget class="QComboBox" name="morphTypeComboBox">
     <property name="minimumSize">
      <size>
       <width>120</width>
       <height>0</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
       <width>150</width>
       <height>16777215</height>
      </size>
     </property>
     <property name="currentIndex">
      <number>0</number>
     </property>
     <item>
      <property name="text">
       <string>MORPH_ERODE</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>MORPH_DILATE</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>MORPH_OPEN</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>MORPH_CLOSE</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>MORPH_GRADIENT</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>MORPH_TOPHAT</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>MORHP_BLACKHAT</string>
      </property>
     </item>
    </widget>
   </item>
  </layout>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <customwidgets>
  <customwidget>
   <class>CVActionView</class>
   <extends>QWidget</extends>
   <header>cvactionview.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
